--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,141 @@
-<h1>home works!</h1>
+<div>
+  <p-menubar [model]="items" class="container bg-image h-screen h-full">
+    <img src="assets/PNG/Logo.png" class="logo" />
+  </p-menubar>
+</div>
+
+<div class="content item-center">
+  <div class="content">
+    <img src="assets/PNG/fixnex.png" class="png" />
+  </div>
+  <div class="content">
+    <img src="assets/PNG/fixnex.png" class="png" />
+  </div>
+</div>
+
+<div class="text-center">
+  <div class="center">
+    <h3>FITNEX</h3>
+  </div>
+</div>
+
+<div class="item-center content">
+  <div class="content text-center">
+    <p-card p-card class="font-card">
+      <img src="assets/PNG/fixnex.png" class="png-card" />
+      <h1>แนะนำ</h1>
+      <h2>อาหารเสริมที่เหมาะสำหรับคุณ</h2>
+      <div class="button-card card">
+        <p-button
+          label="เพิ่มเติม"
+          [text]="true"
+          [raised]="true"
+          severity="secondary"
+          class="custom-button-white"
+        />
+        <p-button
+          label="ทดลอง"
+          [text]="true"
+          [raised]="true"
+          class="custom-button-red"
+        />
+      </div>
+    </p-card>
+  </div>
+</div>
+
+<div class="item-center content">
+  <div class="content text-center">
+    <p-card p-card class="font-card">
+      <img src="assets/PNG/fixnex.png" class="png-card" />
+      <h1>แนะนำ</h1>
+      <h2>อาหารเสริมที่เหมาะสำหรับคุณ</h2>
+      <div class="button-card card">
+        <p-button
+          label="เพิ่มเติม"
+          [text]="true"
+          [raised]="true"
+          severity="secondary"
+          class="custom-button-white"
+        />
+        <p-button
+          label="ทดลอง"
+          [text]="true"
+          [raised]="true"
+          class="custom-button-red"
+        />
+      </div>
+    </p-card>
+  </div>
+</div>
+
+<div class="item-center content">
+  <div class="content text-center">
+    <p-card p-card class="font-card">
+      <img src="assets/PNG/fixnex.png" class="png-card" />
+      <h1>แนะนำ</h1>
+      <h2>คอสออกกำลังกาย</h2>
+      <div class="button-card card">
+        <p-button
+          label="เพิ่มเติม"
+          [text]="true"
+          [raised]="true"
+          severity="secondary"
+          class="custom-button-white"
+        />
+        <p-button
+          label="ทดลอง"
+          [text]="true"
+          [raised]="true"
+          class="custom-button-red"
+        />
+      </div>
+    </p-card>
+  </div>
+</div>
+
+<div class="item-center content">
+  <div class="content text-center">
+    <p-card p-card class="font-card">
+      <img src="assets/PNG/fixnex.png" class="png-card" />
+      <h1>คำนวณ</h1>
+      <h2>สารอาหาร</h2>
+      <div class="button-card card">
+        <p-button
+          label="เพิ่มเติม"
+          [text]="true"
+          [raised]="true"
+          severity="secondary"
+          class="custom-button-white"
+        />
+        <p-button
+          label="ทดลอง"
+          [text]="true"
+          [raised]="true"
+          class="custom-button-red"
+        />
+      </div>
+    </p-card>
+  </div>
+</div>
+
+<div class="background-156">
+  <div class="content">
+    <div>
+      <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
+      <p>เกี่ยวกับเรา</p>
+      <p>ติดต่อเรา</p>
+      <p>ทำไมต้องเลือกเรา</p>
+    </div>
+  </div>
+
+  <div class="content">
+    <div>
+      <h3 class="text-left-underline">สมาชิก</h3>
+      <p>สิทธิพิเศษของสมาชิก</p>
+      <p>กฎระเบียบการใช้งาน</p>
+      <p>โปรโมชั่น</p>
+      <p>สมัครสมาชิก</p>
+    </div>
+  </div>
+</div>
