Added Logo Page
เพิ่มหน้า Logo

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -72,7 +72,7 @@
         <div class="margin margin-top-30px">
           <div class="item-center text-center">
             <p-button
-              label="Continue to facebook"
+              label="Continue to Facebook"
               styleClass="custom-button-facebook-login"
             >
               <img src="assets/PNG/facebook.png" class="img-icon" />
