--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,6 +67,11 @@ body {
   margin: 0.7rem; /* ปรับระยะห่างตามต้องการ */
 }
 
+.contentlogo {
+  display: flex;
+  margin: 1.4rem;
+}
+
 .item-center {
   justify-content: center;
   // justify-items: center;
@@ -162,6 +167,17 @@ body {
   border-color: #1ce6da; /* สีขอบ */
   font-size: 22px; /* ขนาดตัวหนังสือ */
   border: 1px solid #1ce6da; /* ขอบปุ่ม */
+}
+
+.custom-button-white-signup {
+  width: 300px;
+  height: 59px;
+  border-radius: 12px; /* ความโค้งของขอบ */
+  background-color: #ffffff; /* สีพื้นหลัง */
+  color: black; /* สีตัวหนังสือ */
+  border-color: #ffffff; /* สีขอบ */
+  font-size: 22px; /* ขนาดตัวหนังสือ */
+  border: 1px solid #ffffff; /* ขอบปุ่ม */
 }
 
 .custom-button-google-login {
