--- a/src/styles.scss
+++ b/src/styles.scss
@@ -232,3 +232,9 @@ body {
 .width-100 {
   width: 100%;
 }
+
+.galleria-image {
+  width: 100%;         /* ทำให้กว้างเต็มพื้นที่ */
+  height: 300px;      /* ปรับความสูงตามที่ต้องการ */
+  object-fit: cover;   /* ให้ตัดรูปให้พอดีกับกรอบ */
+}
