--- a/src/app/calfood/calfood.component.html
+++ b/src/app/calfood/calfood.component.html
@@ -35,11 +35,11 @@
               <div class="col-7">
                 <div class="cal-radio-wrapper">
                   <div class="cal-radio">
-                    <input type="radio" name="gender">
+                    <input type="radio" name="gender" [(ngModel)]="gender" value="male"> 
                     <label>ชาย</label>
                   </div>
                   <div class="cal-radio ml-3">
-                    <input type="radio" name="gender">
+                    <input type="radio" name="gender" [(ngModel)]="gender" value="female">
                     <label>หญิง</label>
                   </div>
                 </div>
@@ -52,7 +52,7 @@
               </div>
               <div class="col-7">
                 <div class="cal-input-wrapper">
-                  <input name="years" class="form-control" type="text">
+                  <input name="years" class="form-control" type="text" [(ngModel)]="age">
                 </div>
               </div>
             </div>
@@ -64,7 +64,7 @@
               <div class="col-7">
                 <div class="d-flex">
                   <div class="cal-input-wrapper">
-                    <input name="cents" class="form-control" type="text">
+                    <input name="cents" class="form-control" type="text" [(ngModel)]="height">
                   </div>
                   <h3 class="text-black cal-label ml-3">ซม.</h3>
                 </div>
@@ -78,7 +78,7 @@
               <div class="col-7">
                 <div class="d-flex">
                   <div class="cal-input-wrapper">
-                    <input name="kilograms" class="form-control" type="text">
+                    <input name="kilograms" class="form-control" type="text" [(ngModel)]="weight">
                   </div>
                   <h3 class="text-black cal-label ml-3">กก.</h3>
                 </div>
@@ -91,7 +91,7 @@
               </div>
               <div class="col-7">
                 <div class="select-wrapper cal-select-wrapper">
-                  <select name="exercise" class="select form-control">
+                  <select name="exercise" class="select form-control" [(ngModel)]="activityFactor">
                     <option value="1.25">น้อย หรือไม่ค่อยออกกำลังกาย</option>
                     <option value="1.375">ปานกลาง ออกกำลังกาย 1-3 ครั้งต่อสัปดาห์</option>
                     <option value="1.55">ปานกลาง ออกกำลังกาย 4-5 ครั้งต่อสัปดาห์</option>
@@ -108,7 +108,7 @@
               </div>
               <div class="col-7">
                 <div class="select-wrapper cal-select-wrapper">
-                  <select name="objective" class="select form-control">
+                  <select name="objective" class="select form-control" [(ngModel)]="objective">
                     <option value="1">เพิ่มกล้ามเนื้อ</option>
                     <option value="2">ลดไขมัน</option>
                     <option value="3">รักษากล้ามเนื้อ</option>
@@ -119,84 +119,30 @@
           
             <div class="row mt-5">
               <div class="col-12 text-center">
-                <a class="btn btn-primary btn-cal" onclick="CalcDCI()">คำนวณ</a>
+                <button class="btn btn-primary btn-cal" (click)="CalcDCI()">คำนวณ</button>
               </div>
             </div>
           
-            <div id="result" class="cal-result mt-5 bg-black" style="display:none">
+            <div id="result" class="cal-result mt-5 bg-black" *ngIf="bmr">
               <h2 class="text-white">
                 <strong>ข้อมูลส่วนตัวและการออกกำลังกาย</strong>
               </h2>
               <div class="mt-4">
                 <div class="result-wrapper">
-                  <p class="text-white">BMR (Basal Metabolic Rate) พลังงานที่จำเป็นพื้นฐานในการมีชีวิต</p>
+                  <p class="text-white">BMR (Basal Metabolic Rate)</p>
                   <div class="result">
-                    <p class="text-primary">
-                      <span id="bmr">1312</span>
-                      <span class="text-white ml-5">กิโลแคลอรี่</span>
-                    </p>
+                    <p class="text-primary">{{bmr | number: '1.0-0'}} กิโลแคลอรี่</p>
                   </div>
                 </div>
-          
                 <div class="result-wrapper">
-                  <p class="text-white">TDEE (Total Daily Energy Expenditure) พลังงานที่คุณใช้ในแต่ละวัน</p>
+                  <p class="text-white">TDEE (Total Daily Energy Expenditure)</p>
                   <div class="result">
-                    <p class="text-primary">
-                      <span id="tdee">1640</span>
-                      <span class="text-white ml-5">กิโลแคลอรี่</span>
-                    </p>
-                  </div>
-                </div>
-          
-                <div class="row mt-5">
-                  <div class="col-lg-5">
-                    <img class="img-fluid" src="https://www.fitdesignprime.com/wp-content/themes/fitdesign/assets/img/img-kcal-result.jpg" alt="">
-                  </div>
-                  <div class="col-lg-6 offset-lg-1 mt-5 mt-lg-0">
-                    <h3 class="text-white">
-                      <strong>โปรแกรมอาหารต่อวัน</strong>
-                    </h3>
-                    <table class="cal-table table">
-                      <thead>
-                        <tr>
-                          <th> </th>
-                          <th>ปริมาณ(กรัม)</th>
-                          <th>แคล</th>
-                          <th>สัดส่วน</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td class="text-white">โปรตีน</td>
-                          <td id="protein" class="text-primary">111</td>
-                          <td id="protein_cal" class="text-primary">444</td>
-                          <td class="text-primary"><span id="protein_percent">31</span> %</td>
-                        </tr>
-                        <tr>
-                          <td class="text-white">คาร์โบไฮเดรต</td>
-                          <td id="carb" class="text-primary">144</td>
-                          <td id="carb_cal" class="text-primary">444</td>
-                          <td class="text-primary"><span id="carb_percent">31</span> %</td>
-                        </tr>
-                        <tr>
-                          <td class="text-white">ไขมัน</td>
-                          <td id="fat" class="text-primary">144</td>
-                          <td id="fat_cal" class="text-primary">444</td>
-                          <td class="text-primary"><span id="fat_percent">31</span> %</td>
-                        </tr>
-                        <tr>
-                          <td class="text-white">รวมแคลลอรี่</td>
-                          <td> </td>
-                          <td> </td>
-                          <td id="total" class="text-primary">1416</td>
-                        </tr>
-                      </tbody>
-                    </table>
+                    <p class="text-primary">{{tdee | number: '1.0-0'}} กิโลแคลอรี่</p>
                   </div>
                 </div>
               </div>
             </div>
-          </form>          
+          </form>                    
         </div>
       </div>
   
