--- a/src/styles.scss
+++ b/src/styles.scss
@@ -145,7 +145,8 @@ body {
 }
 
 .bg-red {
-  background-image: url("assets/PNG/bg-red.png");
+  background-color: red;
+  //background-image: url("assets/PNG/bg-red.png");
   background-size: contain;
 }
 
@@ -229,6 +230,10 @@ body {
 
 .margin-top-30px {
   margin-top: 30px;
+}
+
+.margin-button-30px{
+  margin-bottom: 40px;
 }
 
 .img-icon {
