--- a/src/styles.scss
+++ b/src/styles.scss
@@ -113,6 +113,11 @@ body {
     margin: 0rem;
     font-size: 50px; /* เปลี่ยนค่า 50px เป็นขนาดที่ต้องการ */
   }
+
+  h2 {
+    margin: 0rem;
+    font-size: 40px;
+  }
 }
 .fixed-card {
   position: fixed;
