--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,38 @@
-<p>profile works!</p>
+<div class="container bg-red item-center">
+  <div class="content item-center center text-white">
+    <h2>บัญชีผู้ใช้</h2>
+  </div>
+
+  <div class="bg-white width-100">
+    <div class="content item-center">
+
+      <div class="margin-top-30px text-center line-height-08">
+        <i class="pi pi-user line-height" style="font-size: 6.0rem; color: red;"></i>
+        <div><h1><strong>{{ user_name }}</strong></h1></div>
+        <div ><h2 class="vip-badge"><strong>VIP {{ vip_level }}</strong></h2></div>
+      </div>
+
+    </div>
+
+    <div class="background-156">
+      <div class="content">
+        <div>
+          <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
+          <p>เกี่ยวกับเรา</p>
+          <p>ติดต่อเรา</p>
+          <p>ทำไมต้องเลือกเรา</p>
+        </div>
+      </div>
+
+      <div class="content">
+        <div>
+          <h3 class="text-left-underline">สมาชิก</h3>
+          <p>สิทธิพิเศษของสมาชิก</p>
+          <p>กฎระเบียบการใช้งาน</p>
+          <p>โปรโมชั่น</p>
+          <p>สมัครสมาชิก</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
