--- a/src/styles.scss
+++ b/src/styles.scss
@@ -268,6 +268,10 @@ body {
   line-height: 0.5; /* ลดระยะห่างระหว่างบรรทัด */
 }
 
+.line-height-1 {
+  line-height: 0.0; /* ลดระยะห่างระหว่างบรรทัด */
+}
+
 .vip-badge {
   display: inline-block;
   background-color: #e0e0e0; /* สีพื้นหลัง */
