--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -23,48 +23,103 @@
       </div>
     </div>
 
-    <hr style="border: none; height: 2px; background-color: #000; margin: 10px 0" />
+    <hr
+      style="border: none; height: 2px; background-color: #000; margin: 10px 0"
+    />
 
     <div class="content item-center line-height-1">
       <h2>ประวัติการสั่งซื้อ</h2>
     </div>
 
-    <hr style="border: none; height: 2px; background-color: #000; margin: 10px 0" />
+    <div *ngFor="let order of orders" class="content item-center">
+      <ng-container *ngIf="orders.length > 0">
+        <p-card (click)="goPageOrder(order.orderItems)" p-card>
+          <div
+            class="p-card-content"
+            style="display: flex; align-items: center; height: 150px"
+          >
+            <div
+              style="
+                flex: 1;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
+                height: 100%;
+              "
+            >
+              <img
+                [src]="getImageOrder(1)"
+                alt="Image"
+                style="max-width: 100%; max-height: 100%; object-fit: cover"
+              />
+            </div>
+
+            <div style="flex: 2; padding-left: 1rem">
+              <p>
+                <strong>รหัสการสั่งซื้อ : # {{ order.order_id }}</strong>
+              </p>
+              <p>สถานะ <strong>:</strong> {{ order.status }}</p>
+              <p>ราคารวม <strong>:</strong> {{ order.total_amount }} บาท</p>
+
+              <p>วันที่จอง <strong>:</strong> {{ order.oder_date | date : "dd-MM-yyyy" }}</p>
+            </div>
+          </div>
+        </p-card>
+      </ng-container>
+    </div>
+
+    <hr
+      style="border: none; height: 2px; background-color: #000; margin: 10px 0"
+    />
 
     <div class="content item-center line-height-1">
       <h2>ประวัติการจองเทรนเนอร์</h2>
     </div>
 
     <div *ngFor="let rental of rentals" class="content item-center">
-      <ng-container *ngIf="rentals.length > 0;">
+      <ng-container *ngIf="rentals.length > 0">
         <p-card p-card>
           <div
-            class="p-card-content "
+            class="p-card-content"
             style="display: flex; align-items: center; height: 150px"
           >
-          <div style="flex: 1;display: flex; align-items: center; justify-content: center; overflow: hidden; height: 100%;">
-            <img
+            <div
+              style="
+                flex: 1;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
+                height: 100%;
+              "
+            >
+              <img
                 [src]="getImagePath(rental.trainer_id)"
                 alt="Image"
                 style="max-width: 100%; max-height: 100%; object-fit: cover"
               />
             </div>
             <div style="flex: 2; padding-left: 1rem">
-              <p><strong>{{ rental.trainer.trainer_name }}</strong><br /></p>
               <p>
-                วันที่จอง : {{ rental.rental_date | date : "dd-MM-yyyy" }}
+                <strong>{{ rental.trainer.trainer_name }}</strong
+                ><br />
+              </p>
+              <p>
+                วันที่จอง <strong>:</strong> {{ rental.rental_date | date : "dd-MM-yyyy" }}
                 <br />
               </p>
-              <p>ระยะเวลา : {{ rental.duration }} นาที<br /></p>
-              <p>ความถนัด : {{ rental.trainer.specialty }}<br /></p>
+              <p>ระยะเวลา <strong>:</strong> {{ rental.duration }} นาที<br /></p>
+              <p>ความถนัด <strong>:</strong> {{ rental.trainer.specialty }}<br /></p>
             </div>
           </div>
         </p-card>
       </ng-container>
-
     </div>
 
-    <hr style="border: none; height: 2px; background-color: #000; margin: 10px 0" />
+    <hr
+      style="border: none; height: 2px; background-color: #000; margin: 10px 0"
+    />
 
     <div class="content item-center line-height-1">
       <h2>ประวัติการลงคอส</h2>
@@ -72,25 +127,36 @@
 
     <div *ngFor="let enrollment of enrollments" class="content item-center">
       <ng-container *ngIf="enrollments.length > 0; else noRentals">
-        <p-card p-card >
+        <p-card p-card>
           <div
             class="p-card-content"
-            style="display: flex; align-items: center; height: 150px;"
+            style="display: flex; align-items: center; height: 150px"
           >
-            <div style="flex: 1;display: flex; align-items: center; justify-content: center; overflow: hidden; height: 100%;">
+            <div
+              style="
+                flex: 1;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
+                height: 100%;
+              "
+            >
               <img
                 [src]="getImagePath(enrollment.program_id)"
                 style="max-width: 100%; max-height: 100%; object-fit: cover"
               />
             </div>
-            <div style="flex: 2; padding-left: 1rem" >
-              <p><strong>{{ enrollment.program.program_name }}</strong></p>
+            <div style="flex: 2; padding-left: 1rem">
+              <p>
+                <strong>{{ enrollment.program.program_name }}</strong>
+              </p>
               <p>
                 {{ enrollment.program.goal }}
                 <br />
               </p>
-              <p>วัน : {{ enrollment.enrollment_date }} น.<br /></p>
-              <p>ระยะเวลา : {{ enrollment.program.duration }} สัปดาห์<br /></p>
+              <p>วัน <strong>:</strong> {{ enrollment.enrollment_date }} น.<br /></p>
+              <p>ระยะเวลา <strong>:</strong> {{ enrollment.program.duration }} สัปดาห์<br /></p>
             </div>
           </div>
         </p-card>
@@ -99,8 +165,6 @@
         <p>No rentals available</p>
       </ng-template>
     </div>
-
-
 
     <div class="background-156">
       <div class="content">
