กำลังทำหน้า Recommend Food
ยังไม่เสร็จ

--- a/src/app/recommend-food/recommend-food.component.html
+++ b/src/app/recommend-food/recommend-food.component.html
@@ -1,1 +1,46 @@
-<p>recommend-food works!</p>
+<div class="container bg-red item-center">
+    <div class="content item-center center text-white">
+        <h2>อาหารเสริม</h2>
+    </div>
+
+    <div class="bg-white width-100">
+        <div class="content item-center">
+            <p-galleria
+              class="margin-top-40px"
+              [value]="images"
+              [circular]="true"
+              [autoPlay]="true"
+              [showIndicators]="true"
+              [showThumbnails]="false"
+              [changeItemOnIndicatorHover]="true"
+              [responsiveOptions]="responsiveOptions"
+              [containerStyle]="{ 'max-width': '100%' }"
+            >
+              <ng-template pTemplate="item" let-item>
+                <img [src]="item" class="galleria-image" />
+              </ng-template>
+            </p-galleria>
+          </div>
+
+        <div class="background-156">
+            <div class="content">
+                <div>
+                    <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
+                    <p>เกี่ยวกับเรา</p>
+                    <p>ติดต่อเรา</p>
+                    <p>ทำไมต้องเลือกเรา</p>
+                </div>
+            </div>
+
+            <div class="content">
+                <div>
+                    <h3 class="text-left-underline">สมาชิก</h3>
+                    <p>สิทธิพิเศษของสมาชิก</p>
+                    <p>กฎระเบียบการใช้งาน</p>
+                    <p>โปรโมชั่น</p>
+                    <p>สมัครสมาชิก</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
