โครงหน้า Recommend Food
กำลังทำเพิ่ม

--- a/src/app/recommend-food/recommend-food.component.html
+++ b/src/app/recommend-food/recommend-food.component.html
@@ -21,6 +21,37 @@
               </ng-template>
             </p-galleria>
           </div>
+          
+        <div class="background-156">
+            <div class="content">
+                <div>
+                    <h1 class="text-left-bold">PROMOTION</h1>
+                    <h1 class="text-left-bold">ลดราคาสูงสุดถึง</h1>
+                </div>
+            </div>
+        </div>  
+
+        <div class="item-center content">
+            <div class="content text-center">
+                <h2 style="color: grey;">ขายดี</h2>
+            </div>
+        </div>
+
+        <hr class="solid">     
+
+        <div class="item-center content">
+            <div class="content text-center">
+                <h2 style="color: grey;">โปรโมชั่นพิเศษ</h2>
+            </div>
+        </div>
+
+        <hr class="solid">  
+
+        <div class="item-center content">
+            <div class="content text-center">
+                <h2 style="color: grey;">สำหรับลูกค้า VIP</h2>
+            </div>
+        </div>
 
         <div class="background-156">
             <div class="content">
