--- a/src/styles.scss
+++ b/src/styles.scss
@@ -295,3 +295,9 @@ body {
 .line-height-07 {
   line-height: 0.7; /* ลดระยะห่างระหว่างบรรทัด */
 }
+
+.hr.solid {
+  margin-left: -30px;
+  margin-right: -30px;
+  color: #000;
+}
