--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
     <div class="margin bg-white bg-login h-screen h-full">
       <div class="margin">
         <br />
-        <form [formGroup]="signUp" class="flex flex-column">
+        <form [formGroup]="signIn" class="flex flex-column">
           <div class="margin">
             <div class="flex flex-column">
               <label for="desc"><strong>Username</strong></label
