--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 @import "primeicons/primeicons.css";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
-p{
+p {
   color: #000;
 }
 
@@ -197,10 +197,11 @@ body {
   border-color: #1ce6da; /* สีขอบ */
   font-size: 22px; /* ขนาดตัวหนังสือ */
   border: 1px solid #1ce6da; /* ขอบปุ่ม */
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); /* เพิ่มเงา */
 }
 
 .custom-button-white-signup {
-  width: 300px;
+  width: 90%;
   height: 59px;
   border-radius: 12px; /* ความโค้งของขอบ */
   background-color: #ffffff; /* สีพื้นหลัง */
@@ -208,6 +209,7 @@ body {
   border-color: #ffffff; /* สีขอบ */
   font-size: 22px; /* ขนาดตัวหนังสือ */
   border: 1px solid #ffffff; /* ขอบปุ่ม */
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); /* เพิ่มเงา */
 }
 
 .custom-button-google-login {
@@ -273,7 +275,7 @@ body {
 }
 
 .line-height-1 {
-  line-height: 0.0; /* ลดระยะห่างระหว่างบรรทัด */
+  line-height: 0; /* ลดระยะห่างระหว่างบรรทัด */
 }
 
 .vip-badge {
