--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -86,7 +86,7 @@
             <small id="Don’t have account?">
               Don’t have account?
             </small>
-            <small class="text-bule">
+            <small class="text-bule" (click)="goSignup()">
               Sign Up
             </small>
           </div>
