--- a/src/app/singup/singup.component.html
+++ b/src/app/singup/singup.component.html
@@ -80,7 +80,8 @@
             <p-button
               label="Back"
               styleClass="custom-button-white-signup"
-            ></p-button>
+              (click)="gologin()"
+              ></p-button>
           </div>
           &nbsp;
         </div>
