--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -1,1 +1,60 @@
-<p>product-page works!</p>
+<div class="container bg-red item-center">
+    <div class="content item-center center text-white">
+        <h2>รายการสินค้า</h2>
+    </div>
+
+    <div class="bg-white width-100">
+          
+        <div class="background-156">
+            <div class="content">
+                <div>
+                    <h1 class="text-left-bold">PROMOTION</h1>
+                    <h1 class="text-left-bold">ลดราคาสูงสุดถึง</h1>
+                </div>
+            </div>
+        </div>  
+
+        <div class="item-center content">
+            <div class="content text-center">
+                <h2 style="color: grey;">จุดเด่นของสินค้า</h2>
+            </div>
+        </div>
+
+        <hr class="solid">     
+
+        <div class="item-center content">
+            <div class="content text-center">
+                <h2 style="color: grey;">Optimum Nutrition Whey Protein Gold</h2>
+            </div>
+        </div>
+
+        <hr class="solid">  
+
+        <div class="item-center content">
+            <div class="content text-center">
+                <h2 style="color: grey;">ควรใช้ร่วมกัน</h2>
+            </div>
+        </div>
+
+        <div class="background-156">
+            <div class="content">
+                <div>
+                    <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
+                    <p>เกี่ยวกับเรา</p>
+                    <p>ติดต่อเรา</p>
+                    <p>ทำไมต้องเลือกเรา</p>
+                </div>
+            </div>
+
+            <div class="content">
+                <div>
+                    <h3 class="text-left-underline">สมาชิก</h3>
+                    <p>สิทธิพิเศษของสมาชิก</p>
+                    <p>กฎระเบียบการใช้งาน</p>
+                    <p>โปรโมชั่น</p>
+                    <p>สมัครสมาชิก</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
