เพิ่ม Grid List รูปภาพในหน้า Recommend Food
มีลง Package ของ Angular Material เพิ่มเล็กน้อย

--- a/src/app/recommend-food/recommend-food.component.html
+++ b/src/app/recommend-food/recommend-food.component.html
@@ -37,6 +37,15 @@
             </div>
         </div>
 
+        <mat-grid-list cols="3" rowHeight="1:1">
+            <mat-grid-tile><img src="assets/PNG/whey.png" class="png" /></mat-grid-tile>
+            <mat-grid-tile><img src="assets/PNG/whey.png" class="png" /></mat-grid-tile>
+            <mat-grid-tile><img src="assets/PNG/whey.png" class="png" /></mat-grid-tile>
+            <mat-grid-tile><img src="assets/PNG/whey.png" class="png" /></mat-grid-tile>
+            <mat-grid-tile><img src="assets/PNG/whey.png" class="png" /></mat-grid-tile>
+            <mat-grid-tile><img src="assets/PNG/whey.png" class="png" /></mat-grid-tile>
+          </mat-grid-list>          
+
         <hr class="solid">     
 
         <div class="item-center content">
